# issen

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FLEET-LICENSE-INVENTORY.md  Justfile  LICENSE  PLAN-fleet-sqlite-and-br4n6.md  PLAN-session-enrichment.md  PLAN-winevt-extract-migration.md  PLAN.md  README.md  RESEARCH_INTEL.md  SPLIT_PLAN.md  STATE_HISTORY_PLAN.md  architecture.html  deny.toml  mkdocs.yml  renovate.json  rust-toolchain.toml
.cargo/: audit.toml
crates/forensic-pivot/: Cargo.toml
crates/forensic-pivot/src/: downloader.rs  engine.rs  evidence.rs  feeds.rs  lib.rs  loader.rs  rule.rs
crates/forensic-pivot/src/adapters/: mod.rs  sigma.rs  suricata.rs  zeek.rs
crates/forensic-pivot/tests/: phase1_engine.rs  phase2_feeds.rs  phase3_loader.rs  phase4_downloader.rs  phase5_downloader.rs
crates/issen-ad1/: Cargo.toml
crates/issen-ad1/src/: lib.rs  tests.rs
crates/issen-aff4/: Cargo.toml
crates/issen-aff4/src/: lib.rs
crates/issen-archive/: Cargo.toml
crates/issen-archive/src/: extract.rs  lib.rs  tests.rs
crates/issen-archive/tests/: adversarial_zipslip.rs
crates/issen-browser/: Cargo.toml
crates/issen-browser/src/: detect.rs  lib.rs
crates/issen-cli/: Cargo.toml
crates/issen-cli/examples/: profile_scan.rs
crates/issen-cli/src/: banner.rs  correlate_progress.rs  ingest_progress.rs  lib.rs  linux_analysis.rs  main.rs  parallel_sources.rs  pipeline.rs  progress_view.rs  scanning.rs
crates/issen-cli/src/commands/: analyse.rs  biome.rs  correlate.rs  correlate_mem.rs  coverage_summary.rs  feed.rs  frequency.rs  info.rs  ingest.rs  memf.rs  mod.rs  pipeline_run.rs  pivot.rs  pivot_cmd.rs  processes.rs  remote_access.rs  report.rs  rules.rs  scan.rs  session.rs  srum.rs  supertimeline.rs  timeline.rs  timeline_format.rs  timeline_query.rs  timeline_verbs.rs
crates/issen-cli/tests/: browser_profile_discovery.rs  classifier_differential.rs  cli_tests.rs  collection_differential.rs  dark_parser_gate.rs  disk_collection_gate.rs  integration_test.rs  link_completeness.rs  multi_source_ingest.rs  orchestration_dry.rs  parser_depth_gate.rs  producer_coverage.rs  reachability_gate.rs  selector_gate.rs  srum_link_tests.rs  timestomp_real_szechuan.rs
crates/issen-core/: Cargo.toml
crates/issen-core/src/: classify.rs  container.rs  coverage.rs  lib.rs
crates/issen-correlation/: Cargo.toml
crates/issen-correlation/src/: artifact_correlation.rs  attack_flow.rs  cluster.rs  correlation.rs  evaluator.rs  lib.rs  model.rs  ruleset.rs  runner.rs  skew.rs  temporal_checks.rs  temporal_rule.rs  time_of_day.rs  timestomp.rs
crates/issen-dd/: Cargo.toml
crates/issen-dd/docs/: corpus-validation.md
crates/issen-dd/src/: lib.rs
crates/issen-dd/tests/: corpus.rs
crates/issen-decrypt/: Cargo.toml
crates/issen-decrypt/src/: adapter.rs  detect.rs  error.rs  lib.rs  source.rs  unlock.rs
crates/issen-decrypt/tests/: detect_unlock.rs  oracle.rs
crates/issen-disk/: Cargo.toml
crates/issen-disk/examples/: dump_file.rs  extract_amcache.rs  extract_security.rs  extract_usrclass.rs  probe_mft.rs
crates/issen-disk/src/: lib.rs
crates/issen-disk/tests/: boot_backup_integrity.rs  extract_user_artifacts.rs  nonntfs_triage.rs  parity_read.rs
crates/issen-dmg/: Cargo.toml
crates/issen-dmg/src/: lib.rs
crates/issen-evtx/: Cargo.toml
crates/issen-evtx/src/: analyze.rs  anti_forensics.rs  boot_cycle.rs  detections.rs  diff.rs  exec_join.rs  export.rs  gap_inference.rs  handlers.rs  lib.rs  logon_chain.rs  mft_correlation.rs  net_correlation.rs  process_tree.rs  session.rs  timeline.rs  usn_correlation.rs  wsl_events.rs
crates/issen-ewf/: Cargo.toml
crates/issen-ewf/src/: lib.rs
crates/issen-fswalker/: Cargo.toml
crates/issen-fswalker/src/: isolate.rs  lib.rs  orchestrator.rs  progress.rs  sources.rs
crates/issen-fswalker/tests/: collection_lifetime.rs
crates/issen-iso/: Cargo.toml
crates/issen-iso/docs/: corpus-validation.md
crates/issen-iso/src/: lib.rs
crates/issen-iso/tests/: corpus.rs
crates/issen-mem/: Cargo.toml
crates/issen-mem/src/: cmd_memf.rs  dispatch.rs  dump_source.rs  hashdb.rs  lib.rs  mem_ingest.rs  open.rs  output.rs  provider.rs  timeline.rs
crates/issen-mem/tests/: securitynik_netscan_malfind.rs  securitynik_ps.rs  szechuan_amcache.rs  szechuan_com_hijacking.rs  szechuan_hashdump.rs  szechuan_lsadump.rs  szechuan_netscan_census.rs  szechuan_netstat.rs  szechuan_shellbags.rs  szechuan_shimcache.rs  zz_scratch_netscan.rs
crates/issen-mft-tree/: Cargo.toml
crates/issen-mft-tree/src/: enrich.rs  lib.rs  node.rs  parse.rs  tree.rs
crates/issen-navigator/: Cargo.toml
crates/issen-navigator/src/: app.rs  lib.rs  main.rs  search.rs  ui.rs
crates/issen-navigator/tests/: collection_loading.rs
crates/issen-parsers/: Cargo.toml  build.rs
crates/issen-parsers/src/: lib.rs
crates/issen-providers/: Cargo.toml  build.rs
crates/issen-providers/src/: lib.rs
crates/issen-qcow2/: Cargo.toml
crates/issen-qcow2/src/: lib.rs
crates/issen-remote-access/: Cargo.toml
crates/issen-remote-access/src/: lib.rs  store.rs
crates/issen-report/: Cargo.toml
crates/issen-report/src/: afb_output.rs  attack_chain.rs  graphviz.rs  lib.rs  mermaid.rs  misp.rs  navigator_output.rs  pdf.rs  stix_output.rs
crates/issen-signatures/: Cargo.toml
crates/issen-signatures/src/: attack_classifier.rs  lib.rs  suricata.rs
crates/issen-timeline/: Cargo.toml
crates/issen-timeline/examples/: measure_load_rss.rs  profile_correlate.rs  stream_window_probe.rs
crates/issen-timeline/src/: correlate_runner.rs  correlations.rs  epoch.rs  events.rs  export.rs  findings.rs  ingest.rs  lib.rs  query.rs  sql_guard.rs  stats.rs  store.rs  temporal.rs  tquery.rs  trender.rs
crates/issen-timeline/tests/: tquery_real_szechuan.rs
crates/issen-unpack/: Cargo.toml
crates/issen-unpack/src/: backing.rs  bzseek.rs  deflate_seek.rs  lib.rs  registry.rs
crates/issen-unpack/tests/: nested_container.rs
crates/issen-vhd/: Cargo.toml
crates/issen-vhd/src/: lib.rs
crates/issen-vhdx/: Cargo.toml
crates/issen-vhdx/src/: lib.rs
(+719 files in other folders)
