[workspace]
resolver = "2"
members = [
    "crates/rt-correlation",
    "crates/rt-core",
    "crates/rt-fswalker",
    "crates/rt-plugin-sdk",
    "crates/rt-timeline",
    "crates/rt-ewf",
    "crates/rt-shrinkpath",
    "crates/rt-signatures",
    "crates/rt-remote-access",
    "crates/parsers/rt-parser-mft",
    "crates/parsers/rt-parser-evtx",
    "crates/parsers/rt-parser-velociraptor",
    "crates/parsers/rt-parser-uac",
    "crates/parsers/rt-parser-registry",
    "crates/parsers/rt-parser-prefetch",
    "crates/parsers/rt-parser-lnk",
    "crates/parsers/rt-parser-linux",
    "crates/parsers/rt-parser-macos",
    "crates/parsers/rt-parser-amcache",
    "crates/parsers/rt-parser-shimcache",
    "crates/rt-report",
    "crates/rt-cli",
    "crates/rt-navigator",
    "crates/rt-mft-tree",
    "crates/rt-unpack",
    "crates/rt-mem",
    "crates/rt-remote-io",
    "crates/rt-browser",
    "xtask",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/rapidtriage"
authors = ["RapidTriage Contributors"]

[workspace.dependencies]
# Internal crates (path dependencies)
forensicnomicon = { path = "../forensicnomicon" }
rt-core       = { path = "crates/rt-core" }
rt-fswalker   = { path = "crates/rt-fswalker" }
rt-plugin-sdk = { path = "crates/rt-plugin-sdk" }
rt-timeline   = { path = "crates/rt-timeline" }
rt-ewf        = { path = "crates/rt-ewf" }
rt-shrinkpath = { path = "crates/rt-shrinkpath" }
rt-parser-mft     = { path = "crates/parsers/rt-parser-mft" }
rt-parser-evtx    = { path = "crates/parsers/rt-parser-evtx" }
rt-parser-velociraptor = { path = "crates/parsers/rt-parser-velociraptor" }
rt-parser-uac          = { path = "crates/parsers/rt-parser-uac" }
rt-parser-registry     = { path = "crates/parsers/rt-parser-registry" }
rt-parser-prefetch     = { path = "crates/parsers/rt-parser-prefetch" }
rt-parser-lnk          = { path = "crates/parsers/rt-parser-lnk" }
rt-parser-linux        = { path = "crates/parsers/rt-parser-linux" }
rt-parser-macos        = { path = "crates/parsers/rt-parser-macos" }
rt-report         = { path = "crates/rt-report" }
rt-signatures = { path = "crates/rt-signatures" }
rt-remote-access = { path = "crates/rt-remote-access" }
rt-mft-tree      = { path = "crates/rt-mft-tree" }
rt-unpack        = { path = "crates/rt-unpack" }
rt-mem          = { path = "crates/rt-mem" }
rt-browser      = { path = "crates/rt-browser" }
rt-correlation   = { path = "crates/rt-correlation" }
rt-remote-io     = { path = "crates/rt-remote-io" }

# Memory forensic crates (path dependencies into sibling workspace)
memf-core      = { path = "../memory-forensic/crates/memf-core" }
memf-format    = { path = "../memory-forensic/crates/memf-format" }
memf-symbols   = { path = "../memory-forensic/crates/memf-symbols" }
memf-linux     = { path = "../memory-forensic/crates/memf-linux" }
memf-windows   = { path = "../memory-forensic/crates/memf-windows" }
memf-strings   = { path = "../memory-forensic/crates/memf-strings" }
memf-correlate = { path = "../memory-forensic/crates/memf-correlate" }
forensic-hashdb = { path = "../memory-forensic/crates/forensic-hashdb" }
browser-core    = { path = "../browser-forensic/crates/browser-core" }
browser-chrome  = { path = "../browser-forensic/crates/browser-chrome" }
browser-firefox = { path = "../browser-forensic/crates/browser-firefox" }

# External dependencies
duckdb       = { version = "1", features = ["bundled"] }
rusqlite     = { version = "0.32", features = ["bundled"] }
tokio        = { version = "1", features = ["rt-multi-thread", "macros"] }
rayon        = "1"
clap         = { version = "4", features = ["derive"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
inventory    = "0.3"
chrono       = { version = "0.4", features = ["serde"] }
bytes        = "1"
memmap2      = "0.9"
tempfile     = "3"
sha2         = "0.10"
hex          = "0.4"

# Signature scanning engines
yara-x      = "0.12"
tau-engine   = "1"

# HTTP client for feed downloads
reqwest      = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Additional parsing & networking
serde_yaml   = "0.9"
csv          = "1"
ipnet        = "2"
md-5         = "0.10"
regex        = "1"
zip          = "2"
percent-encoding = "2"
flate2       = "1"
tar          = "0.4"

# Forensic artifact parsers
usnjrnl-forensic = { path = "../usnjrnl-forensic", default-features = false }
ewf          = "0.1"
evtx         = { version = "0.11", default-features = false }
mft          = "0.6"
notatin      = "1.0"

# XML / filesystem scanning
uuid         = { version = "1", features = ["v4"] }
glob         = "0.3"
quick-xml    = "0.37"

# Path utilities
shrinkpath   = "0.1"

# TUI
ratatui      = "0.29"
crossterm    = "0.28"
indicatif    = "0.17"

# Dev/test dependencies
insta        = { version = "1", features = ["yaml"] }
assert_cmd   = "2"
predicates   = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
