[workspace]
resolver = "2"
members = [
    "crates/issen-correlation",
    "crates/issen-core",
    "crates/issen-fswalker",
    "crates/issen-plugin-sdk",
    "crates/issen-timeline",
    "crates/issen-ewf",
    "crates/issen-shrinkpath",
    "crates/issen-signatures",
    "crates/issen-remote-access",
    "crates/parsers/issen-parser-pe",
    "crates/parsers/issen-parser-mft",
    "crates/parsers/issen-parser-evtx",
    "crates/parsers/issen-parser-velociraptor",
    "crates/parsers/issen-parser-uac",
    "crates/parsers/issen-parser-registry",
    "crates/parsers/issen-parser-prefetch",
    "crates/parsers/issen-parser-lnk",
    "crates/parsers/issen-parser-linux",
    "crates/parsers/issen-parser-macos",
    "crates/parsers/issen-parser-amcache",
    "crates/parsers/issen-parser-shimcache",
    "crates/parsers/issen-parser-shellbags",
    "crates/parsers/issen-parser-setupapi",
    "crates/parsers/issen-parser-srum",
    "crates/issen-report",
    "crates/issen-cli",
    "crates/issen-navigator",
    "crates/issen-mft-tree",
    "crates/issen-unpack",
    "crates/issen-mem",
    "crates/issen-remote-io",
    "crates/issen-browser",
    "crates/issen-evtx",
    "crates/issen-dd",
    "crates/issen-vhd",
    "crates/issen-vhdx",
    "crates/issen-vmdk",
    "crates/issen-disk",
    "crates/issen-qcow2",
    "crates/issen-iso",
    "crates/issen-aff4",
    "crates/forensic-pivot",
    "crates/issen-wsl",
    "xtask",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/issen"
authors = ["Issen Contributors"]

[workspace.dependencies]
# Internal crates (path dependencies)
forensicnomicon  = { path = "../forensicnomicon" }
forensic-pivot   = { path = "crates/forensic-pivot" }
issen-core       = { path = "crates/issen-core" }
issen-fswalker   = { path = "crates/issen-fswalker" }
issen-plugin-sdk = { path = "crates/issen-plugin-sdk" }
issen-timeline   = { path = "crates/issen-timeline" }
issen-ewf        = { path = "crates/issen-ewf" }
issen-dd         = { path = "crates/issen-dd" }
issen-vhd        = { path = "crates/issen-vhd" }
issen-vhdx       = { path = "crates/issen-vhdx" }
issen-vmdk       = { path = "crates/issen-vmdk" }
issen-disk       = { path = "crates/issen-disk" }
disk-forensic    = { path = "../disk-forensic" }
ntfs-forensic    = { path = "../ntfs-forensic" }
issen-qcow2      = { path = "crates/issen-qcow2" }
issen-iso        = { path = "crates/issen-iso" }
issen-aff4       = { path = "crates/issen-aff4" }
issen-shrinkpath = { path = "crates/issen-shrinkpath" }
issen-parser-pe      = { path = "crates/parsers/issen-parser-pe" }
issen-parser-mft     = { path = "crates/parsers/issen-parser-mft" }
issen-parser-evtx    = { path = "crates/parsers/issen-parser-evtx" }
issen-parser-velociraptor = { path = "crates/parsers/issen-parser-velociraptor" }
issen-parser-uac          = { path = "crates/parsers/issen-parser-uac" }
issen-parser-registry     = { path = "crates/parsers/issen-parser-registry" }
issen-parser-prefetch     = { path = "crates/parsers/issen-parser-prefetch" }
issen-parser-lnk          = { path = "crates/parsers/issen-parser-lnk" }
issen-parser-linux        = { path = "crates/parsers/issen-parser-linux" }
issen-parser-macos        = { path = "crates/parsers/issen-parser-macos" }
issen-parser-shellbags    = { path = "crates/parsers/issen-parser-shellbags" }
issen-parser-setupapi     = { path = "crates/parsers/issen-parser-setupapi" }
issen-report         = { path = "crates/issen-report" }
issen-signatures = { path = "crates/issen-signatures" }
issen-remote-access = { path = "crates/issen-remote-access" }
issen-mft-tree      = { path = "crates/issen-mft-tree" }
issen-unpack        = { path = "crates/issen-unpack" }
issen-mem          = { path = "crates/issen-mem" }
issen-browser      = { path = "crates/issen-browser" }
issen-correlation   = { path = "crates/issen-correlation" }
issen-remote-io     = { path = "crates/issen-remote-io" }
issen-evtx          = { path = "crates/issen-evtx" }
issen-wsl           = { path = "crates/issen-wsl" }

# winevt-forensic crates (path dependencies into sibling workspace)
winevt-core     = { path = "../winevt-forensic/crates/winevt-core" }
winevt-extract  = { path = "../winevt-forensic/crates/winevt-extract" }
winevt-analysis = { path = "../winevt-forensic/crates/winevt-analysis" }

# Memory forensic crates (path dependencies into sibling workspace)
memf-core      = { path = "../memory-forensic/crates/memf-core" }
memf-format    = { path = "../memory-forensic/crates/memf-format" }
memf-symbols   = { path = "../memory-forensic/crates/memf-symbols" }
memf-linux     = { path = "../memory-forensic/crates/memf-linux" }
memf-windows   = { path = "../memory-forensic/crates/memf-windows" }
memf-strings   = { path = "../memory-forensic/crates/memf-strings" }
memf-correlate = { path = "../memory-forensic/crates/memf-correlate" }
forensic-hashdb = { path = "../memory-forensic/crates/forensic-hashdb" }
browser-core    = { path = "../browser-forensic/crates/browser-core" }
browser-chrome  = { path = "../browser-forensic/crates/browser-chrome" }
browser-firefox = { path = "../browser-forensic/crates/browser-firefox" }
browser-safari  = { path = "../browser-forensic/crates/browser-safari" }

# External dependencies
duckdb       = { version = "1", features = ["bundled"] }
rusqlite     = { version = "0.32", features = ["bundled"] }
tokio        = { version = "1", features = ["rt-multi-thread", "macros"] }
rayon        = "1"
clap         = { version = "4", features = ["derive"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
inventory    = "0.3"
chrono       = { version = "0.4", features = ["serde"] }
bytes        = "1"
memmap2      = "0.9"
tempfile     = "3"
sha2         = "0.10"
hex          = "0.4"
colored      = "2"
is-terminal  = "0.4"

# Signature scanning engines
yara-x      = "0.12"
tau-engine   = "1"

# HTTP client for feed downloads
reqwest      = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Additional parsing & networking
serde_yaml   = "0.9"
csv          = "1"
ipnet        = "2"
md-5         = "0.10"
regex        = "1"
schemars     = { version = "0.8", features = ["derive"] }
zip          = "2"
percent-encoding = "2"
flate2       = "1"
tar          = "0.4"

# Forensic artifact parsers
usnjrnl-forensic = { path = "../usnjrnl-forensic", default-features = false }
srum-parser      = { path = "../srum-forensic/crates/srum-parser" }
srum-core        = { path = "../srum-forensic/crates/srum-core" }
goblin       = { version = "0.10", default-features = false, features = ["pe32", "pe64", "std"] }
ewf          = "0.1"
dd           = { path = "../dd/dd" }
vhd          = { path = "../vhd/vhd" }
vhdx         = { path = "../vhdx/vhdx" }
vmdk         = { path = "../vmdk/vmdk" }
qcow2        = { path = "../qcow2/qcow2" }
hadris-iso   = "1"
aff4         = { path = "../aff4/aff4" }
evtx         = { version = "0.11", default-features = false }
mft          = "0.6"
notatin      = "1.0"

# XML / filesystem scanning
uuid         = { version = "1", features = ["v4"] }
glob         = "0.3"
quick-xml    = "0.37"

# Path utilities
shrinkpath   = "0.1"

# TUI
ratatui      = "0.29"
crossterm    = "0.28"
indicatif    = "0.17"

# Dev/test dependencies
insta        = { version = "1", features = ["yaml"] }
assert_cmd   = "2"
predicates   = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[patch.crates-io]
forensicnomicon = { path = "../forensicnomicon" }
notatin = { path = "vendor/notatin" }
