[workspace]
resolver = "2"
members = [
    "crates/issen-correlation",
    "crates/issen-core",
    "crates/issen-fswalker",
    "crates/issen-plugin-sdk",
    "crates/issen-timeline",
    "crates/issen-ewf",
    "crates/issen-shrinkpath",
    "crates/issen-signatures",
    "crates/issen-remote-access",
    "crates/parsers/issen-parser-pe",
    "crates/parsers/issen-parser-mft",
    "crates/parsers/issen-parser-evtx",
    "crates/parsers/issen-parser-velociraptor",
    "crates/parsers/issen-parser-uac",
    "crates/parsers/issen-parser-registry",
    "crates/parsers/issen-parser-logfile",
    "crates/parsers/issen-parser-prefetch",
    "crates/parsers/issen-parser-lnk",
    "crates/parsers/issen-parser-trash",
    "crates/parsers/issen-parser-linux",
    "crates/parsers/issen-parser-macos",
    "crates/parsers/issen-parser-biome",
    "crates/parsers/issen-parser-amcache",
    "crates/parsers/issen-parser-shimcache",
    "crates/parsers/issen-parser-shellbags",
    "crates/parsers/issen-parser-setupapi",
    "crates/parsers/issen-parser-srum",
    "crates/parsers/issen-parser-runkeys",
    "crates/parsers/issen-parser-userassist",
    "crates/parsers/issen-parser-sam",
    "crates/parsers/issen-parser-comhijack",
    "crates/parsers/issen-parser-dcc2",
    "crates/parsers/issen-parser-lsasecrets",
    "crates/parsers/issen-parser-svcdiff",
    "crates/parsers/issen-parser-typedurls",
    "crates/parsers/issen-parser-lxss",
    "crates/parsers/issen-parser-regcatalog",
    "crates/issen-report",
    "crates/issen-parsers",
    "crates/issen-providers",
    "crates/issen-cli",
    "crates/issen-navigator",
    "crates/issen-mft-tree",
    "crates/issen-unpack",
    "crates/issen-mem",
    "crates/issen-remote-io",
    "crates/issen-browser",
    "crates/issen-evtx",
    "crates/issen-dd",
    "crates/issen-vhd",
    "crates/issen-vhdx",
    "crates/issen-vmdk",
    "crates/issen-disk",
    "crates/issen-qcow2",
    "crates/issen-iso",
    "crates/issen-aff4",
    "crates/forensic-pivot",
    "crates/issen-wsl",
    "xtask",
]

[workspace.package]
edition = "2021"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/issen"
authors = ["Issen Contributors"]

[workspace.dependencies]
# Internal crates (path dependencies)
forensicnomicon  = "0.5"
forensic-pivot   = { path = "crates/forensic-pivot" }
issen-core       = { path = "crates/issen-core" }
issen-fswalker   = { path = "crates/issen-fswalker" }
issen-plugin-sdk = { path = "crates/issen-plugin-sdk" }
issen-timeline   = { path = "crates/issen-timeline" }
issen-ewf        = { path = "crates/issen-ewf" }
issen-dd         = { path = "crates/issen-dd" }
issen-vhd        = { path = "crates/issen-vhd" }
issen-vhdx       = { path = "crates/issen-vhdx" }
issen-vmdk       = { path = "crates/issen-vmdk" }
issen-disk       = { path = "crates/issen-disk" }
disk-forensic    = "0.8"
ntfs-forensic    = "0.6.0"
ntfs-core        = "0.8"
issen-qcow2      = { path = "crates/issen-qcow2" }
issen-iso        = { path = "crates/issen-iso" }
issen-aff4       = { path = "crates/issen-aff4" }
issen-shrinkpath = { path = "crates/issen-shrinkpath" }
issen-parser-pe      = { path = "crates/parsers/issen-parser-pe" }
issen-parser-mft     = { path = "crates/parsers/issen-parser-mft" }
issen-parser-usnjrnl = { path = "crates/parsers/issen-parser-usnjrnl" }
issen-parser-evtx    = { path = "crates/parsers/issen-parser-evtx" }
issen-parser-velociraptor = { path = "crates/parsers/issen-parser-velociraptor" }
issen-parser-uac          = { path = "crates/parsers/issen-parser-uac" }
issen-parser-registry     = { path = "crates/parsers/issen-parser-registry" }
issen-parser-srum         = { path = "crates/parsers/issen-parser-srum" }
issen-parser-biome        = { path = "crates/parsers/issen-parser-biome" }
issen-parser-runkeys      = { path = "crates/parsers/issen-parser-runkeys" }
issen-parser-userassist   = { path = "crates/parsers/issen-parser-userassist" }
issen-parser-sam          = { path = "crates/parsers/issen-parser-sam" }
issen-parser-comhijack    = { path = "crates/parsers/issen-parser-comhijack" }
issen-parser-dcc2         = { path = "crates/parsers/issen-parser-dcc2" }
issen-parser-lsasecrets   = { path = "crates/parsers/issen-parser-lsasecrets" }
issen-parser-svcdiff      = { path = "crates/parsers/issen-parser-svcdiff" }
issen-parser-typedurls    = { path = "crates/parsers/issen-parser-typedurls" }
issen-parser-lxss         = { path = "crates/parsers/issen-parser-lxss" }
issen-parser-regcatalog   = { path = "crates/parsers/issen-parser-regcatalog" }
issen-parser-logfile      = { path = "crates/parsers/issen-parser-logfile" }
issen-parser-prefetch     = { path = "crates/parsers/issen-parser-prefetch" }
issen-parser-lnk          = { path = "crates/parsers/issen-parser-lnk" }
issen-parser-trash   = { path = "crates/parsers/issen-parser-trash" }
issen-parser-amcache      = { path = "crates/parsers/issen-parser-amcache" }
issen-parser-shimcache    = { path = "crates/parsers/issen-parser-shimcache" }
issen-parser-linux        = { path = "crates/parsers/issen-parser-linux" }
issen-parser-macos        = { path = "crates/parsers/issen-parser-macos" }
issen-parser-shellbags    = { path = "crates/parsers/issen-parser-shellbags" }
issen-parser-setupapi     = { path = "crates/parsers/issen-parser-setupapi" }
issen-report         = { path = "crates/issen-report" }
issen-signatures = { path = "crates/issen-signatures" }
issen-remote-access = { path = "crates/issen-remote-access" }
issen-mft-tree      = { path = "crates/issen-mft-tree" }
issen-unpack        = { path = "crates/issen-unpack" }
issen-mem          = { path = "crates/issen-mem" }
issen-browser      = { path = "crates/issen-browser" }
issen-correlation   = { path = "crates/issen-correlation" }
issen-remote-io     = { path = "crates/issen-remote-io" }
issen-evtx          = { path = "crates/issen-evtx" }
issen-wsl           = { path = "crates/issen-wsl" }
# Aggregator umbrellas (build.rs codegen anchors all parser/provider crates)
issen-parsers       = { path = "crates/issen-parsers" }
issen-providers     = { path = "crates/issen-providers" }

# winevt-forensic crates (path dependencies into sibling workspace)
winevt-core     = "0.2"
winevt-extract  = "0.1"
winevt-analysis = "0.1"

# Memory forensic crates (path dependencies into sibling workspace)
memf-core      = "0.2.1"
memf-format    = "0.2.1"
memf-symbols   = "0.2.1"
memf-linux     = "0.2.1"
memf-windows   = "0.2.1"
memf-strings   = "0.2.1"
memf-correlate = "0.2.1"
forensic-hashdb = "0.1"
browser-core    = { version = "0.1", package = "browser-forensic-core" }
browser-chrome  = { version = "0.1", package = "browser-forensic-chrome" }
browser-firefox = { version = "0.1", package = "browser-forensic-firefox" }
browser-safari  = { version = "0.1", package = "browser-forensic-safari" }

# External dependencies
duckdb       = { version = "1", features = ["bundled"] }
rusqlite     = { version = "0.32", features = ["bundled"] }
tokio        = { version = "1", features = ["rt-multi-thread", "macros"] }
rayon        = "1"
clap         = { version = "4", features = ["derive"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
inventory    = "0.3"
toml         = "0.8"
chrono       = { version = "0.4", features = ["serde"] }
bytes        = "1"
memmap2      = "0.9"
tempfile     = "3"
sha2         = "0.10"
hex          = "0.4"
colored      = "2"
is-terminal  = "0.4"

# Signature scanning engines
yara-x      = "0.12"
tau-engine   = "1"

# HTTP client for feed downloads
reqwest      = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Additional parsing & networking
serde_yaml   = "0.9"
csv          = "1"
ipnet        = "2"
md-5         = "0.10"
regex        = "1"
schemars     = { version = "0.8", features = ["derive"] }
zip          = "2"
percent-encoding = "2"
flate2       = "1"
tar          = "0.4"

# Forensic artifact parsers
srum-parser      = "0.1.0"
srum-core        = "0.1.0"
segb             = { version = "0.1", package = "segb-core" }
segb-forensic    = "0.1"
useract-forensic = "0.3"
goblin       = { version = "0.10", default-features = false, features = ["pe32", "pe64", "std"] }
ewf          = "0.2"
vhd          = "0.1.0"
vhdx         = { version = "0.2.1", package = "vhdx-core" }
vmdk         = { version = "0.6.4", package = "vmdk-core" }
qcow2        = { version = "0.2", package = "qcow2-core" }
hadris-iso   = "1"
aff4         = "0.1.0"
evtx         = { version = "0.11", default-features = false }
mft          = "0.6"

# Registry — our own winreg-forensic fleet crates (notatin fully removed)
winreg-core      = "0.1.0"
winreg-artifacts = "0.2"

# XML / filesystem scanning
uuid         = { version = "1", features = ["v4"] }
glob         = "0.3"
quick-xml    = "0.37"

# Path utilities
shrinkpath   = "0.1"

# TUI
ratatui      = "0.29"
crossterm    = "0.28"
indicatif    = "0.17"
ctrlc        = "3"

# Dev/test dependencies
insta        = { version = "1", features = ["yaml"] }
assert_cmd   = "2"
predicates   = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
# Pragmatic allows (fleet standard — see ~/.claude/CLAUDE.md Paranoid Gatekeeper):
# pedantic lints that are noise for application/orchestration code and were
# missing from this workspace, so the pedantic warn-set drifted far above the
# documented baseline.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
