[package]
name = "forensic-pivot"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Cross-tool evidence correlation engine (Pivot Engine) for RapidTriage"
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[lints]
workspace = true
