[package]
name = "issen-aff4"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "AFF4 disk image reader for the Issen forensic pipeline"
repository.workspace = true

[lib]
name = "issen_aff4"
path = "src/lib.rs"

[dependencies]
issen-core   = { workspace = true }
issen-unpack = { workspace = true }
# NTFS disk-triage extractor, run over the decoded AFF4 image (mirrors issen-ewf).
issen-disk   = { workspace = true }
inventory    = { workspace = true }
aff4         = { workspace = true }
zip-forensic-core = { workspace = true }
thiserror    = { workspace = true }
tempfile     = { workspace = true }

[dev-dependencies]
aff4     = { workspace = true, features = ["test-helpers"] }
# zip-rs writer mints the in-memory AFF4/zip fixtures the unit tests read back.
zip      = { workspace = true }

[lints]
workspace = true
