[package]
name = "issen-browser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Browser forensic integration layer for Issen"
repository.workspace = true

[dependencies]
issen-core      = { workspace = true }
browser-core    = { workspace = true }
browser-chrome  = { workspace = true }
browser-firefox = { workspace = true }
browser-safari  = { workspace = true }
snss-core       = { workspace = true }
inventory       = { workspace = true }
jiff            = { workspace = true }
anyhow          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
rusqlite        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
