[package]
name = "issen-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Command-line interface for Issen"
repository.workspace = true

[[bin]]
name = "issen"
path = "src/main.rs"

[lib]
name = "issen_cli"
path = "src/lib.rs"

[dependencies]
forensic-pivot = { workspace = true }
issen-core = { workspace = true }
issen-fswalker = { workspace = true }
issen-timeline = { workspace = true }
issen-signatures = { workspace = true }
forensicnomicon = { workspace = true }
ntfs-core = { workspace = true }
mft = { workspace = true }
chrono = { workspace = true }
inventory = { workspace = true }
issen-parser-evtx = { workspace = true }
issen-parser-registry = { workspace = true }
issen-report = { workspace = true }
issen-remote-access = { workspace = true }
issen-parser-velociraptor = { workspace = true }
issen-parser-uac = { workspace = true }
issen-parser-prefetch = { workspace = true }
issen-parser-amcache = { workspace = true }
issen-parser-shimcache = { workspace = true }
issen-parser-shellbags = { workspace = true }
issen-parser-srum = { workspace = true }
issen-parser-biome = { workspace = true }
issen-parser-runkeys = { workspace = true }
issen-parser-userassist = { workspace = true }
issen-parser-sam = { workspace = true }
issen-parser-comhijack = { workspace = true }
issen-parser-dcc2 = { workspace = true }
issen-parser-lsasecrets = { workspace = true }
issen-parser-svcdiff = { workspace = true }
issen-parser-typedurls = { workspace = true }
issen-parser-lxss = { workspace = true }
issen-parser-regcatalog = { workspace = true }
# Revived orphans (issen #114 unify): $MFT/$J + loose-file artifacts were
# classified by discovery but had no LINKED parser, so the supertimeline dropped
# them. Link them so run_auto is the single all-encompassing path.
issen-parser-mft = { workspace = true }
issen-parser-usnjrnl = { workspace = true }
issen-parser-pe = { workspace = true }
issen-parser-lnk = { workspace = true }
issen-parser-trash = { workspace = true }
issen-parser-linux = { workspace = true }
issen-parser-macos = { workspace = true }
issen-parser-setupapi = { workspace = true }
issen-correlation = { workspace = true, features = ["remote"] }
issen-unpack = { workspace = true }
issen-mem    = { workspace = true }
issen-evtx   = { workspace = true }
issen-vhdx   = { workspace = true }
issen-ewf    = { workspace = true }
issen-vmdk   = { workspace = true }
issen-vhd    = { workspace = true }
issen-dd     = { workspace = true }
issen-qcow2  = { workspace = true }
issen-iso    = { workspace = true }
winevt-core = { workspace = true }
issen-remote-io = { workspace = true, features = ["remote"] }
srum-parser  = { workspace = true }
srum-core    = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
is-terminal = { workspace = true }
anyhow = { workspace = true }
duckdb = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
issen-remote-io = { workspace = true, features = ["sftp"] }

[dev-dependencies]
assert_cmd = { workspace = true }
flate2 = { workspace = true }
predicates = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
