[package]
name = "issen-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Core types, timeline schema, and plugin traits for Issen"
repository.workspace = true

[dependencies]
forensicnomicon = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
inventory = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
