[package]
name = "issen-correlation"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Cross-source forensic triage correlation engine for Issen"
repository.workspace = true

[features]
remote = []

[dependencies]
issen-core = { workspace = true }
forensicnomicon = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
