[package]
name = "issen-disk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Disk-image orchestration for Issen: container DataSource → partition table → NTFS filesystem → triage artifacts"
repository.workspace = true

[lib]
name = "issen_disk"
path = "src/lib.rs"

[dependencies]
issen-core    = { workspace = true }
disk-forensic = { workspace = true }
ntfs-forensic = { workspace = true }
ntfs-core     = { workspace = true }
issen-unpack  = { workspace = true }
tempfile      = { workspace = true }
thiserror     = { workspace = true }
serde_json    = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
issen-ewf = { workspace = true }
