[package]
name = "issen-evtx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Windows Event Log integration layer for Issen"
repository.workspace = true

[dependencies]
forensicnomicon = { workspace = true }
issen-core     = { workspace = true }
winevt-core     = { workspace = true }
winevt-extract  = { workspace = true }
winevt-analysis = { workspace = true }
evtx           = { workspace = true }
anyhow         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
chrono         = { workspace = true }
rusqlite       = { workspace = true }
schemars       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
