[package]
name = "issen-fswalker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Filesystem walker and artifact dispatch for Issen"
repository.workspace = true

[dependencies]
issen-core = { workspace = true }
issen-disk = { workspace = true }
issen-unpack = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
inventory = { workspace = true }

[lints]
workspace = true
