[package]
name = "issen-iso"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "ISO 9660 optical disc image reader for the Issen forensic pipeline"
repository.workspace = true

[lib]
name = "issen_iso"
path = "src/lib.rs"

[dependencies]
issen-core   = { workspace = true }
issen-unpack = { workspace = true }
inventory    = { workspace = true }
iso9660-forensic = { workspace = true }
zip          = { workspace = true }
thiserror    = { workspace = true }
tempfile     = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
